fix: responsiveness on mobile devices

--- a/src/micro-components/News/News.module.scss
+++ b/src/micro-components/News/News.module.scss
@@ -28,8 +28,8 @@
 
   &__tag {
     position: absolute;
-    top: -.5rem;
-    left: -.5rem;
+    top: -1rem;
+    left: -1rem;
     padding: 5px .5rem .25rem .75rem;
     background: black;
     font-size: 1rem;
